feat: Implement Comment, Rating, and Report functionalities